resume and some margin fun

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       <p class="statement">I make software at <a href="www.workwithopal.com">Opal Labs</a></p>
       <p class="statement">I'm also on the Board of Directors for <a href="www.openfarm.cc">OpenFarm</a></p>
       <p class="statement">And I'm currently organizing pdx.js</p>
-      <p class="minor">Previously: Experts Exchange, Barker Creek Publishing, Shopatron</p>
-      <p class="minor">Take a look at some of my techincal skills</p>
-      <p class="minor">Read my blog</p>
-      <p class="minor">Check out my resume</p>
+      <div class="minor">
+        <p>Previously: Experts Exchange, Barker Creek Publishing, Shopatron</p>
+<!--         <p>Take a look at some of my techincal skills</p>
+        <p>Read my blog</p> -->
+        <a href="resume-plummer.pdf">Check out my resume</a>
+      </div>
     </div>
 
     <div class='col-2'>
