--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class='col-1'>
       <h1>Hey there, I'm Emily</h1>
       <p class="statement">I am a Front End Engineer</p>
-      <p class="statement">I make software at <a href="www.workwithopal.com">Opal Labs</a></p>
-      <p class="statement">I'm also on the Board of Directors for <a href="www.openfarm.cc">OpenFarm</a></p>
+      <p class="statement">I make software at <a href="http://www.workwithopal.com">Opal Labs</a></p>
+      <p class="statement">I'm also on the Board of Directors for <a href="http://www.openfarm.cc">OpenFarm</a></p>
       <p class="statement">And I'm currently organizing pdx.js</p>
       <div class="minor">
         <p>Previously: Experts Exchange, Barker Creek Publishing, Shopatron</p>
