--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <p class="statement">I am a Front End Engineer</p>
       <p class="statement">I make software at <a href="http://www.workwithopal.com">Opal Labs</a></p>
       <p class="statement">I'm also on the Board of Directors for <a href="http://www.openfarm.cc">OpenFarm</a></p>
+      <p class="statement">In my free time, I <a href="https://www.flickr.com/photos/135574082@N07/albums">explore</a></p>
       <p class="statement">And I'm currently organizing <a href="https://github.com/emily-plummer/portland_js">portlandJS</a></p>
       <div class="minor">
         <p>Previously: Experts Exchange, Barker Creek Publishing, Shopatron</p>
