--- a/index.html
+++ b/index.html
@@ -5,30 +5,28 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Emily Plummer</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.scss">
     <link rel='shortcut icon' type='image/png' href='favicon.png'/>
   </head>
   <body>
-    <div class='col-1'>
-      <h1>Hey there, I'm Emily</h1>
-      <p class="statement">I am a Front End Engineer</p>
-      <p class="statement">I make software at <a href="http://www.workwithopal.com">Opal Labs</a></p>
-      <p class="statement">I'm also on the Board of Directors for <a href="http://www.openfarm.cc">OpenFarm</a></p>
-      <p class="statement">In my free time, I <a href="https://www.flickr.com/photos/135574082@N07/albums">explore</a></p>
-      <p class="statement">And I'm currently organizing <a href="https://github.com/donut-js/donut-js.github.io">DonutJS</a></p>
-      <div class="minor">
-        <p>Previously: Experts Exchange, Barker Creek Publishing, Shopatron</p>
-<!--         <p>Take a look at some of my techincal skills</p>
-        <p>Read my blog</p> -->
-        <a href="resume-plummer.pdf">Check out my resume</a>
-      </div>
+    <div class='hero'>
+      <h1 class='title'>Hey there, I'm Emily 👋</h1>
+    </div>
+    <div class='current'>
+      <p>I'm a Front End Engineer.</p>
+      <p>I'm currently working at Buffer.</p>
+      <p>I founded <a href="https://donutjs.club">Donut.js</a>.</p>
+      <p>I speak at conferences and meetups.</p>
+      <p>I'm a <a href="https://instagram.com/wittefarm">flower farmer</a> in my spare time.</p>
     </div>
 
-    <div class='col-2'>
+    <div class='footer'>
       <h1>Contact</h1>
-      <a class="contact twitter" href="http://www.twitter.com/emplums">@emplums</a>
-      <a class="contact github" href="http://www.github.com/emily-plummer">emily-plummer</a>
-      <a class="contact email" href="mailto:eplummer26@gmail.com">eplummer26@gmail.com</a>
+      <div class='icons'>
+        <a class="contact-icons twitter" href="http://www.twitter.com/emplums">@emplums</a>
+        <a class="contact-icons github" href="http://www.github.com/emily-plummer">emily-plummer</a>
+        <a class="contact-icons email" href="mailto:eplummer26@gmail.com">eplummer26@gmail.com</a>
+      </div>
     </div>
   </body>
 </html>
