--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Emily Plummer</title>
-    <link rel="stylesheet" href="css/index.scss">
+    <link rel="stylesheet" href="css/index.css">
     <link rel='shortcut icon' type='image/png' href='favicon.png'/>
   </head>
   <body>
