--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class='icons'>
         <a class="contact-icons twitter" href="http://www.twitter.com/emplums">@emplums</a>
         <a class="contact-icons github" href="http://www.github.com/emily-plummer">emily-plummer</a>
-        <a class="contact-icons email" href="mailto:eplummer26@gmail.com">eplummer26@gmail.com</a>
+        <a class="contact-icons email" href="mailto:hi@emilyplummer.party">eplummer26@gmail.com</a>
       </div>
     </div>
   </body>
