--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link rel='shortcut icon' type='image/png' href='favicon.png'/>
   </head>
   <body>
-    <div class='hero'>
+    <div class='hero-cont'>
       <h1 class='title'>Hey there, I'm Emily 👋</h1>
+      <div class='hero'>
+        <div class='marq-container'>
+          <marquee class='marq' behavior='alternate'>🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼  </marquee>
+          <marquee class='marq' behavior='alternate'>🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕  </marquee>
+          <marquee class='marq' behavior='alternate'>🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨  </marquee>
+          <marquee class='marq' behavior='alternate'>🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺  </marquee>
+        </div>
+      </div>
     </div>
     <div class='current'>
       <p>I'm a Front End Engineer.</p>
@@ -19,6 +27,10 @@
       <p>I speak at conferences and meetups.</p>
       <p>I'm a <a href="https://instagram.com/wittefarm">flower farmer</a> in my spare time.</p>
     </div>
+    <div>
+      <marquee class='marq' behavior='alternate'>🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 </marquee>
+    </div>
+    <a class='blog-link' href='/blog'>blog</a>
 
     <div class='footer'>
       <h1>Contact</h1>
