--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>I speak at conferences and meetups.</p>
       <p>I'm a <a href="https://instagram.com/wittefarm">flower farmer</a> in my spare time.</p>
     </div>
-    <a class='blog-link' href='/blog'>blog</a>
+    <a class='blog-link' href='/blog'>🌸 blog 🌸</a>
 
     <div class='footer'>
       <h1>Contact</h1>
