--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>I'm currently working at Buffer.</p>
       <p>I founded <a href="https://donutjs.club">Donut.js</a>.</p>
       <p>I speak at conferences and meetups.</p>
-      <p>I'm a <a href="https://instagram.com/wittefarm">flower farmer</a> in my spare time.</p>
+      <p>I'm a <a href="https://instagram.com/emplumeria">flower farmer</a> in my spare time.</p>
     </div>
     <a class='blog-link' href='/blog'>🌸 blog 🌸</a>
 
