make the marquee responsive lol

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
       <h1 class='title'>Hey there, I'm Emily 👋</h1>
       <div class='hero'>
         <div class='marq-container'>
-          <marquee class='marq' behavior='alternate'>🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼  </marquee>
+          <marquee class='marq' behavior='alternate'>🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱  </marquee>
           <marquee class='marq' behavior='alternate'>🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕  </marquee>
           <marquee class='marq' behavior='alternate'>🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨  </marquee>
-          <marquee class='marq' behavior='alternate'>🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺  </marquee>
+          <marquee class='marq' behavior='alternate'>🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈   </marquee>
+          <marquee class='marq' behavior='alternate'>🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱   </marquee>
+          <marquee class='marq' behavior='alternate'>🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕  </marquee>
+          <marquee class='marq' behavior='alternate'>🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨ 🌻 💕 🌺 🌱 🌼 🌈 🌸 ✨  </marquee>
         </div>
       </div>
     </div>
