--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>I founded <a href="https://donutjs.club">Donut.js</a>.</p>
       <p>I speak at conferences and meetups.</p>
       <p>I'm a <a href="https://instagram.com/emplumeria">flower farmer</a> in my spare time.</p>
-      <a class='blog-link' href='/blog'>🌸 blog 🌸</a>
+      <!--<a class='blog-link' href='/blog'>🌸 blog 🌸</a>-->
       <div class='footer'>
         <h1>Contact</h1>
         <div class='icons'>
