--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class='current'>
       <p>I'm a Front End Engineer.</p>
       <p>I'm currently working at Buffer.</p>
-      <p>I founded <a href="https://donutjs.club">Donut.js</a>.</p>
+      <p>I co-founded <a href="https://donutjs.club">Donut.js</a>.</p>
       <p>I speak at conferences and meetups.</p>
       <p>I'm a <a href="https://instagram.com/emplumeria">flower farmer</a> in my spare time.</p>
       <!--<a class='blog-link' href='/blog'>🌸 blog 🌸</a>-->
